cabal-version:       3.0
name:                om-fork
version:             0.7.1.3
synopsis:            Haskell concurrency utilities.
-- description:         
homepage:            https://github.com/owensmurray/om-fork
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2018 Owens Murray, LLC.
-- category:            
build-type:          Simple
extra-source-files:
  README.md
  LICENSE

common dependencies
  build-depends:
    , aeson        >= 2.0.3.0  && < 2.1
    , base         >= 4.15.1.0 && < 4.16
    , exceptions   >= 0.10.4   && < 0.11
    , ki           >= 0.2.0.1  && < 0.3
    , monad-logger >= 0.3.36   && < 0.4
    , om-show      >= 0.1.2.0  && < 0.2
    , text         >= 1.2.5.0  && < 1.3
    , unliftio     >= 0.2.22.0 && < 0.3

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

library
  import: warnings, dependencies
  exposed-modules:     
    OM.Fork
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs: src
  default-language: Haskell2010

